maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:6: error: not found: value keepHandOnSideWall
    keepHandOnSideWall()
    ^