maze.island.IslandMaze.scala.code
override def run() 
{
  while(!porteBiscuit())
  {
    keepHandOnSideWall()
    if (estSurBiscuit())
    	{
        prendBiscuit()
      }
  }
}

def keepHandOnLeftWall()
{
  if(murGauche())
  	{
      if(!estFaceMur())
  			{
      		avance()
    		}
      else
      	{
          droite()
        }
    }
  else
  	{
      gauche()
      avance()
    }
}

def keepHandOnRightWall()
{
  if(murDroite())
  	{
      if(!estFaceMur())
  			{
      		avance()
    		}
      else
      	{
          gauche()
        }
    }
  else
  	{
      droite()
      avance()
    }
}

def murGauche():Boolean=
{
  gauche()
  var mur=estFaceMur()
  droite()
  return mur
}

def murDroite():Boolean=
{
  droite()
  var mur=estFaceMur()
  gauche()
  return mur
}

//Si on a pas de mur en face on avance puis on regarde à gauche
//		Si on a toujours un mur à gauche, on avance
//		Si on n'a pas à gauche,on tourne à gauche et on avance puis 2 solutions:
			// Si on a pas de mur à gauche on retourne à gauche
			// Si on a un mur à gauche on avance